test/files/neg/t10661.scala

class C {
  def f[A] = new C with A
}
